new runs of Attribute importance analysis and Random Search

--- a/Code/Attribute importance analysis.ipynb
+++ b/Code/Attribute importance analysis.ipynb
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "fabulous-humor",
    "metadata": {},
    "outputs": [],
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "broad-photograph",
    "metadata": {},
    "outputs": [
@@ -1440,7 +1440,7 @@
        "19.3"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "decimal-passion",
    "metadata": {},
    "outputs": [
@@ -1475,36 +1475,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "functional-sport",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rd_sorted = {k: v for k, v in sorted(rd.items(), key=lambda item: item[1], reverse=True)[:63]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "detailed-grant",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "VE2_G/D 20.26\n",
-      "Eig14_EA(dm) 20.25\n",
-      "Mor31m 20.1\n",
-      "TDB04u 20.03\n",
-      "HATS1e 19.99\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'VE2_G/D': 20.26,\n",
+       " 'Eig14_EA(dm)': 20.25,\n",
+       " 'Mor31m': 20.1,\n",
+       " 'TDB04u': 20.03,\n",
+       " 'HATS1e': 19.99,\n",
+       " 'HATS3p': 19.97,\n",
+       " 'RDF015p': 19.95,\n",
+       " 'Mor17s': 19.91,\n",
+       " 'N-072': 19.89,\n",
+       " 'O-057': 19.85,\n",
+       " 'MATS2m': 19.84,\n",
+       " 'E2m': 19.83,\n",
+       " 'RDF035v': 19.82,\n",
+       " 'Dp': 19.79,\n",
+       " 'CATS2D_00_AA': 19.79,\n",
+       " 'CATS3D_03_DL': 19.78,\n",
+       " 'SpPosA_D/Dt': 19.75,\n",
+       " 'CATS2D_02_AP': 19.75,\n",
+       " 'SpMaxA_EA(bo)': 19.74,\n",
+       " 'F03[C-N]': 19.74,\n",
+       " 'RDF080e': 19.71,\n",
+       " 'Chi_RG': 19.71,\n",
+       " 'HATS0e': 19.7,\n",
+       " 'CATS2D_06_PP': 19.69,\n",
+       " 'Eta_beta_A': 19.69,\n",
+       " 'SaaNH': 19.69,\n",
+       " 'MATS3v': 19.68,\n",
+       " 'SpMax6_Bh(s)': 19.68,\n",
+       " 'Mor09s': 19.68,\n",
+       " 'CATS2D_02_PL': 19.67,\n",
+       " 'HATS6p': 19.67,\n",
+       " 'Chi_Dz(e)': 19.67,\n",
+       " 'SsOH': 19.66,\n",
+       " 'Mor19p': 19.66,\n",
+       " 'H4i': 19.65,\n",
+       " 'Eta_FL_A': 19.65,\n",
+       " 'SAacc': 19.65,\n",
+       " 'R6m+': 19.65,\n",
+       " 'SpMAD_B(s)': 19.65,\n",
+       " 'SpMAD_G/D': 19.64,\n",
+       " 'R5m': 19.64,\n",
+       " 'TDB04i': 19.63,\n",
+       " 'nOHs': 19.63,\n",
+       " 'SM07_EA(bo)': 19.63,\n",
+       " 'GATS2m': 19.61,\n",
+       " 'SpMax2_Bh(e)': 19.61,\n",
+       " 'R4s': 19.61,\n",
+       " 'GATS6v': 19.61,\n",
+       " 'Ts': 19.61,\n",
+       " 'CATS2D_07_DD': 19.61,\n",
+       " 'CATS2D_04_AL': 19.6,\n",
+       " 'F06[C-C]': 19.6,\n",
+       " 'RDF045m': 19.6,\n",
+       " 'nRNR2': 19.59,\n",
+       " 'HATS2m': 19.59,\n",
+       " 'H5v': 19.59,\n",
+       " 'X3Av': 19.59,\n",
+       " 'SIC1': 19.59,\n",
+       " 'MATS6p': 19.59,\n",
+       " 'RDF055v': 19.58,\n",
+       " 'B03[O-O]': 19.58,\n",
+       " 'G2p': 19.58,\n",
+       " 'SpMAD_EA(bo)': 19.58}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for m in selected_features:\n",
-    "    print(m, rd[m])"
+    "rd_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "racial-herald",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rd_df = pd.DataFrame(rd, index=[0]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "given-attempt",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rd_df.columns=['value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "helpful-custom",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1261.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>18.999937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.351199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>17.760000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>18.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>18.990000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>19.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>20.260000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             value\n",
+       "count  1261.000000\n",
+       "mean     18.999937\n",
+       "std       0.351199\n",
+       "min      17.760000\n",
+       "25%      18.750000\n",
+       "50%      18.990000\n",
+       "75%      19.250000\n",
+       "max      20.260000"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rd_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "terminal-instruction",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rd_df[rd_df['value']==17.76])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "sonic-haven",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1261"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rd_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "functioning-marking",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['VE2_G/D',\n",
+       " 'Eig14_EA(dm)',\n",
+       " 'Mor31m',\n",
+       " 'TDB04u',\n",
+       " 'HATS1e',\n",
+       " 'HATS3p',\n",
+       " 'RDF015p',\n",
+       " 'Mor17s',\n",
+       " 'N-072',\n",
+       " 'O-057',\n",
+       " 'MATS2m',\n",
+       " 'E2m',\n",
+       " 'RDF035v',\n",
+       " 'Dp',\n",
+       " 'CATS2D_00_AA',\n",
+       " 'CATS3D_03_DL',\n",
+       " 'SpPosA_D/Dt',\n",
+       " 'CATS2D_02_AP',\n",
+       " 'SpMaxA_EA(bo)',\n",
+       " 'F03[C-N]',\n",
+       " 'RDF080e',\n",
+       " 'Chi_RG',\n",
+       " 'HATS0e',\n",
+       " 'CATS2D_06_PP',\n",
+       " 'Eta_beta_A',\n",
+       " 'SaaNH',\n",
+       " 'MATS3v',\n",
+       " 'SpMax6_Bh(s)',\n",
+       " 'Mor09s',\n",
+       " 'CATS2D_02_PL',\n",
+       " 'HATS6p',\n",
+       " 'Chi_Dz(e)',\n",
+       " 'SsOH',\n",
+       " 'Mor19p',\n",
+       " 'H4i',\n",
+       " 'Eta_FL_A',\n",
+       " 'SAacc',\n",
+       " 'R6m+',\n",
+       " 'SpMAD_B(s)',\n",
+       " 'SpMAD_G/D',\n",
+       " 'R5m',\n",
+       " 'TDB04i',\n",
+       " 'nOHs',\n",
+       " 'SM07_EA(bo)',\n",
+       " 'GATS2m',\n",
+       " 'SpMax2_Bh(e)',\n",
+       " 'R4s',\n",
+       " 'GATS6v',\n",
+       " 'Ts',\n",
+       " 'CATS2D_07_DD',\n",
+       " 'CATS2D_04_AL',\n",
+       " 'F06[C-C]',\n",
+       " 'RDF045m',\n",
+       " 'nRNR2',\n",
+       " 'HATS2m',\n",
+       " 'H5v',\n",
+       " 'X3Av',\n",
+       " 'SIC1',\n",
+       " 'MATS6p',\n",
+       " 'RDF055v',\n",
+       " 'B03[O-O]',\n",
+       " 'G2p',\n",
+       " 'SpMAD_EA(bo)']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(rd_sorted.keys())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "detailed-grant",
+   "id": "exposed-uzbekistan",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "y_valid"
-   ]
+   "source": []
   }
  ],
  "metadata": {
