--- a/Code/Random Search.ipynb
+++ b/Code/Random Search.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "random_state = 42\n",
-    "seeds = np.arange(100)"
+    "#seeds = np.arange(100)\n",
+    "seeds = [42]"
    ]
   },
   {
@@ -79,7 +80,8 @@
    "source": [
     "def get_model():\n",
     "    model = keras.models.Sequential([\n",
-    "        keras.layers.Dense(50, activation='relu', input_shape=(len(x_cols),)),\n",
+    "        keras.layers.GaussianNoise(stddev=0.1, input_shape=(len(x_cols),)),\n",
+    "        keras.layers.Dense(50, activation='relu'),\n",
     "        keras.layers.Dense(20, activation='relu'),\n",
     "        keras.layers.Dense(10, activation='relu'),\n",
     "        keras.layers.Dense(1)\n",
@@ -136,106 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n"
+      "43\n"
      ]
     }
    ],
@@ -262,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "10001"
+       "101"
       ]
      },
      "execution_count": 12,
@@ -283,7 +186,7 @@
     {
      "data": {
       "text/plain": [
-       "((176, 361, 384, 1062, 1233, 58, 1), 0.0041495985351502895)"
+       "((409, 466, 516, 1140, 1215, 42, 7), 0.008951899595558643)"
       ]
      },
      "execution_count": 13,
@@ -297,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "genetic-india",
    "metadata": {},
    "outputs": [],
@@ -307,17 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "weird-helmet",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03346603691032956"
+       "0.034060123911367195"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,17 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "complimentary-medicaid",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0041495985351502895"
+       "0.008951899595558643"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,39 +252,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "close-commonwealth",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['CATS2D_04_DP', 'CATS3D_02_AP', 'Eta_betaS', 'P_VSA_LogP_4', 'VE1_B(s)']"
+       "['B04[C-C]', 'CATS3D_03_DP', 'Eig11_AEA(ed)', 'J_RG', 'SpMAD_EA(ed)']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_random = [X_full.columns[i] for i in [176, 361, 384, 1062, 1233]]\n",
+    "best_random = [X_full.columns[i] for i in [409, 466, 516, 1140, 1215]]\n",
     "sorted(best_random)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "revised-greensboro",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('random_search.npy', result)"
+    "#np.save('random_search.npy', result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "reverse-bunch",
    "metadata": {},
    "outputs": [],
@@ -393,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "coupled-mentor",
    "metadata": {},
    "outputs": [],
@@ -403,17 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "ceramic-joint",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10001, 8)"
+       "(101, 8)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "statutory-thursday",
    "metadata": {},
    "outputs": [],
@@ -434,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "changed-means",
    "metadata": {},
    "outputs": [],
@@ -444,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "id": "competent-share",
    "metadata": {},
    "outputs": [],
@@ -454,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "residential-leather",
    "metadata": {},
    "outputs": [],
@@ -464,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "accurate-export",
    "metadata": {},
    "outputs": [],
@@ -475,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "advised-heaven",
    "metadata": {},
    "outputs": [
@@ -520,51 +423,51 @@
        "      <td>758</td>\n",
        "      <td>791</td>\n",
        "      <td>1258</td>\n",
-       "      <td>0.038656</td>\n",
+       "      <td>0.034692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>42</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>339</td>\n",
-       "      <td>387</td>\n",
-       "      <td>643</td>\n",
-       "      <td>800</td>\n",
-       "      <td>1068</td>\n",
-       "      <td>0.029177</td>\n",
+       "      <td>112</td>\n",
+       "      <td>545</td>\n",
+       "      <td>552</td>\n",
+       "      <td>823</td>\n",
+       "      <td>972</td>\n",
+       "      <td>0.018517</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
+       "      <td>42</td>\n",
        "      <td>1</td>\n",
-       "      <td>634</td>\n",
-       "      <td>764</td>\n",
-       "      <td>816</td>\n",
-       "      <td>1021</td>\n",
-       "      <td>1148</td>\n",
-       "      <td>0.045479</td>\n",
+       "      <td>118</td>\n",
+       "      <td>661</td>\n",
+       "      <td>926</td>\n",
+       "      <td>959</td>\n",
+       "      <td>1227</td>\n",
+       "      <td>0.043725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0</td>\n",
+       "      <td>42</td>\n",
        "      <td>2</td>\n",
-       "      <td>348</td>\n",
-       "      <td>703</td>\n",
-       "      <td>845</td>\n",
-       "      <td>1027</td>\n",
-       "      <td>1175</td>\n",
-       "      <td>0.031528</td>\n",
+       "      <td>230</td>\n",
+       "      <td>466</td>\n",
+       "      <td>566</td>\n",
+       "      <td>629</td>\n",
+       "      <td>1054</td>\n",
+       "      <td>0.026725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>42</td>\n",
-       "      <td>221</td>\n",
-       "      <td>917</td>\n",
-       "      <td>961</td>\n",
-       "      <td>1065</td>\n",
-       "      <td>0.026154</td>\n",
+       "      <td>3</td>\n",
+       "      <td>286</td>\n",
+       "      <td>557</td>\n",
+       "      <td>567</td>\n",
+       "      <td>685</td>\n",
+       "      <td>1033</td>\n",
+       "      <td>0.024174</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -578,83 +481,83 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>99</td>\n",
+       "      <th>96</th>\n",
+       "      <td>42</td>\n",
        "      <td>95</td>\n",
-       "      <td>17</td>\n",
-       "      <td>31</td>\n",
-       "      <td>135</td>\n",
-       "      <td>453</td>\n",
-       "      <td>942</td>\n",
-       "      <td>0.028576</td>\n",
+       "      <td>71</td>\n",
+       "      <td>307</td>\n",
+       "      <td>842</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>1066</td>\n",
+       "      <td>0.047431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>99</td>\n",
+       "      <th>97</th>\n",
+       "      <td>42</td>\n",
        "      <td>96</td>\n",
-       "      <td>19</td>\n",
-       "      <td>103</td>\n",
-       "      <td>270</td>\n",
-       "      <td>811</td>\n",
-       "      <td>975</td>\n",
-       "      <td>0.055681</td>\n",
+       "      <td>562</td>\n",
+       "      <td>877</td>\n",
+       "      <td>1031</td>\n",
+       "      <td>1055</td>\n",
+       "      <td>1062</td>\n",
+       "      <td>0.033027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>99</td>\n",
+       "      <th>98</th>\n",
+       "      <td>42</td>\n",
        "      <td>97</td>\n",
-       "      <td>404</td>\n",
-       "      <td>760</td>\n",
-       "      <td>996</td>\n",
-       "      <td>1094</td>\n",
-       "      <td>1143</td>\n",
-       "      <td>0.061254</td>\n",
+       "      <td>156</td>\n",
+       "      <td>634</td>\n",
+       "      <td>679</td>\n",
+       "      <td>876</td>\n",
+       "      <td>938</td>\n",
+       "      <td>0.054794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>99</td>\n",
+       "      <th>99</th>\n",
+       "      <td>42</td>\n",
        "      <td>98</td>\n",
-       "      <td>320</td>\n",
-       "      <td>500</td>\n",
-       "      <td>567</td>\n",
-       "      <td>580</td>\n",
-       "      <td>582</td>\n",
-       "      <td>0.026083</td>\n",
+       "      <td>66</td>\n",
+       "      <td>195</td>\n",
+       "      <td>563</td>\n",
+       "      <td>924</td>\n",
+       "      <td>1023</td>\n",
+       "      <td>0.060844</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10000</th>\n",
+       "      <th>100</th>\n",
+       "      <td>42</td>\n",
        "      <td>99</td>\n",
-       "      <td>99</td>\n",
-       "      <td>88</td>\n",
-       "      <td>305</td>\n",
-       "      <td>413</td>\n",
-       "      <td>918</td>\n",
-       "      <td>1037</td>\n",
-       "      <td>0.043581</td>\n",
+       "      <td>656</td>\n",
+       "      <td>770</td>\n",
+       "      <td>891</td>\n",
+       "      <td>943</td>\n",
+       "      <td>1233</td>\n",
+       "      <td>0.015466</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10001 rows × 8 columns</p>\n",
+       "<p>101 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       seed  run  idx_0  idx_1  idx_2  idx_3  idx_4     score\n",
-       "0        -1   -1    370    657    758    791   1258  0.038656\n",
-       "1         0    0    339    387    643    800   1068  0.029177\n",
-       "2         0    1    634    764    816   1021   1148  0.045479\n",
-       "3         0    2    348    703    845   1027   1175  0.031528\n",
-       "4         0    3     42    221    917    961   1065  0.026154\n",
-       "...     ...  ...    ...    ...    ...    ...    ...       ...\n",
-       "9996     99   95     17     31    135    453    942  0.028576\n",
-       "9997     99   96     19    103    270    811    975  0.055681\n",
-       "9998     99   97    404    760    996   1094   1143  0.061254\n",
-       "9999     99   98    320    500    567    580    582  0.026083\n",
-       "10000    99   99     88    305    413    918   1037  0.043581\n",
+       "     seed  run  idx_0  idx_1  idx_2  idx_3  idx_4     score\n",
+       "0      -1   -1    370    657    758    791   1258  0.034692\n",
+       "1      42    0    112    545    552    823    972  0.018517\n",
+       "2      42    1    118    661    926    959   1227  0.043725\n",
+       "3      42    2    230    466    566    629   1054  0.026725\n",
+       "4      42    3    286    557    567    685   1033  0.024174\n",
+       "..    ...  ...    ...    ...    ...    ...    ...       ...\n",
+       "96     42   95     71    307    842   1009   1066  0.047431\n",
+       "97     42   96    562    877   1031   1055   1062  0.033027\n",
+       "98     42   97    156    634    679    876    938  0.054794\n",
+       "99     42   98     66    195    563    924   1023  0.060844\n",
+       "100    42   99    656    770    891    943   1233  0.015466\n",
        "\n",
-       "[10001 rows x 8 columns]"
+       "[101 rows x 8 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "id": "hairy-capture",
    "metadata": {},
    "outputs": [
@@ -679,11 +582,11 @@
        "idx_2    160.000000\n",
        "idx_3    215.000000\n",
        "idx_4    668.000000\n",
-       "score      0.005151\n",
+       "score      0.008952\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "id": "motivated-verification",
    "metadata": {},
    "outputs": [
@@ -731,7 +634,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4208</th>\n",
+       "      <th>8</th>\n",
        "      <td>42</td>\n",
        "      <td>7</td>\n",
        "      <td>409</td>\n",
@@ -739,29 +642,29 @@
        "      <td>516</td>\n",
        "      <td>1140</td>\n",
        "      <td>1215</td>\n",
-       "      <td>0.005151</td>\n",
+       "      <td>0.008952</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      seed  run  idx_0  idx_1  idx_2  idx_3  idx_4     score\n",
-       "4208    42    7    409    466    516   1140   1215  0.005151"
+       "   seed  run  idx_0  idx_1  idx_2  idx_3  idx_4     score\n",
+       "8    42    7    409    466    516   1140   1215  0.008952"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res_df[(res_df['score']<0.00516) & (res_df['score']>0.00515)]"
+    "res_df[(res_df['score']<0.009) & (res_df['score']>0.0089)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "id": "animal-appraisal",
    "metadata": {},
    "outputs": [
@@ -771,7 +674,7 @@
        "['B04[C-C]', 'CATS3D_03_DP', 'Eig11_AEA(ed)', 'J_RG', 'SpMAD_EA(ed)']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
