--- a/Code/DL Model based on statistics.ipynb
+++ b/Code/DL Model based on statistics.ipynb
@@ -45,11 +45,11 @@
    "source": [
     "col_names = data.columns\n",
     "#x_cols = ['P_VSA_MR_5', 'Mor04m', 'LUMO / eV']\n",
-    "#x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
+    "x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
     "#x_cols=['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m', 'TDB04u', 'HATS1e']\n",
     "#x_cols=['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m']\n",
     "#x_cols = ['CATS2D_04_DP', 'CATS3D_02_AP', 'Eta_betaS', 'P_VSA_LogP_4', 'VE1_B(s)']\n",
-    "x_cols = ['B04[C-C]', 'CATS3D_03_DP', 'Eig11_AEA(ed)', 'J_RG', 'SpMAD_EA(ed)']\n",
+    "#x_cols = ['B04[C-C]', 'CATS3D_03_DP', 'Eig11_AEA(ed)', 'J_RG', 'SpMAD_EA(ed)']\n",
     "X = data[x_cols]\n",
     "y = data[col_names[2]]"
    ]
@@ -145,55 +145,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "2/2 [==============================] - 0s 63ms/step - loss: 0.4397 - val_loss: 0.2111\n",
+      "2/2 [==============================] - 0s 59ms/step - loss: 0.4029 - val_loss: 0.2034\n",
       "Epoch 2/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.1650 - val_loss: 0.0298\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.1603 - val_loss: 0.0512\n",
       "Epoch 3/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0914 - val_loss: 0.0675\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.1270 - val_loss: 0.0511\n",
       "Epoch 4/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.1344 - val_loss: 0.0341\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.1376 - val_loss: 0.0351\n",
       "Epoch 5/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0804 - val_loss: 0.0292\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0884 - val_loss: 0.0433\n",
       "Epoch 6/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0660 - val_loss: 0.0585\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0814 - val_loss: 0.0673\n",
       "Epoch 7/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0805 - val_loss: 0.0707\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0904 - val_loss: 0.0669\n",
       "Epoch 8/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0861 - val_loss: 0.0571\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0883 - val_loss: 0.0460\n",
       "Epoch 9/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0728 - val_loss: 0.0309\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0731 - val_loss: 0.0253\n",
       "Epoch 10/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0579 - val_loss: 0.0144\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0638 - val_loss: 0.0175\n",
       "Epoch 11/25\n",
-      "2/2 [==============================] - 0s 16ms/step - loss: 0.0587 - val_loss: 0.0139\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0662 - val_loss: 0.0179\n",
       "Epoch 12/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0656 - val_loss: 0.0132\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0673 - val_loss: 0.0144\n",
       "Epoch 13/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0639 - val_loss: 0.0097\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0607 - val_loss: 0.0116\n",
       "Epoch 14/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0581 - val_loss: 0.0133\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0564 - val_loss: 0.0137\n",
       "Epoch 15/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0533 - val_loss: 0.0192\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0528 - val_loss: 0.0113\n",
       "Epoch 16/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0558 - val_loss: 0.0216\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0485 - val_loss: 0.0093\n",
       "Epoch 17/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0551 - val_loss: 0.0166\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0459 - val_loss: 0.0120\n",
       "Epoch 18/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0523 - val_loss: 0.0111\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0451 - val_loss: 0.0121\n",
       "Epoch 19/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0519 - val_loss: 0.0078\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0424 - val_loss: 0.0115\n",
       "Epoch 20/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0522 - val_loss: 0.0072\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0396 - val_loss: 0.0116\n",
       "Epoch 21/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0520 - val_loss: 0.0076\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0406 - val_loss: 0.0128\n",
       "Epoch 22/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0504 - val_loss: 0.0098\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0396 - val_loss: 0.0148\n",
       "Epoch 23/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0506 - val_loss: 0.0133\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0372 - val_loss: 0.0199\n",
       "Epoch 24/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0504 - val_loss: 0.0137\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0380 - val_loss: 0.0224\n",
       "Epoch 25/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0503 - val_loss: 0.0126\n"
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0370 - val_loss: 0.0174\n"
      ]
     }
    ],
@@ -221,12 +221,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "true: 0.328, predicted: 0.397\n",
-      "true: 0.896, predicted: 0.752\n",
-      "true: 0.817, predicted: 0.616\n",
-      "true: 0.765, predicted: 0.704\n",
-      "true: 0.893, predicted: 0.820\n",
-      "true: 0.733, predicted: 0.710\n"
+      "true: 0.328, predicted: 0.471\n",
+      "true: 0.896, predicted: 0.808\n",
+      "true: 0.817, predicted: 0.940\n",
+      "true: 0.765, predicted: 0.728\n",
+      "true: 0.893, predicted: 1.137\n",
+      "true: 0.733, predicted: 0.746\n"
      ]
     }
    ],
@@ -271,12 +271,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[-133.1519  ],\n",
-       "       [ -10.390106],\n",
-       "       [ -57.52736 ],\n",
-       "       [ -27.087143],\n",
-       "       [  13.000366],\n",
-       "       [ -25.128372]], dtype=float32)"
+       "array([[-107.337845],\n",
+       "       [   8.827606],\n",
+       "       [  54.15686 ],\n",
+       "       [ -18.731384],\n",
+       "       [ 122.156494],\n",
+       "       [ -12.51355 ]], dtype=float32)"
       ]
      },
      "execution_count": 14,
