bugfix in datarun

--- a/Code/Automated run analysis.ipynb
+++ b/Code/Automated run analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "qualified-mediterranean",
+   "id": "liked-dancing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "suburban-costa",
+   "id": "incredible-vision",
    "metadata": {},
    "outputs": [],
    "source": [
     "def classifier(x):\n",
     "    if x < -40:\n",
     "        return 'ea'\n",
-    "    if x <= 0:\n",
+    "    if x < 0:\n",
     "        return 'ma'\n",
-    "    if x <= 40:\n",
+    "    if x < 40:\n",
     "        return 'mi'\n",
     "    return 'ei'"
    ]
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "introductory-sustainability",
+   "id": "ordinary-colors",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "improved-saturday",
+   "id": "grave-authority",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "jewish-playback",
+   "id": "facial-moment",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "leading-climb",
+   "id": "committed-assault",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "external-stocks",
+   "id": "sudden-architecture",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bound-person",
+   "id": "canadian-reporter",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "      <td>ma</td>\n",
        "      <td>mi</td>\n",
        "      <td>ma</td>\n",
-       "      <td>ma</td>\n",
+       "      <td>mi</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -602,7 +602,7 @@
       ],
       "text/plain": [
        "                                 0   5  36  45  13  54 loss\n",
-       "inhibition efficiency ZE41 / %  ea  mi  mi  ma  mi  ma   ma"
+       "inhibition efficiency ZE41 / %  ea  mi  mi  ma  mi  ma   mi"
       ]
      },
      "execution_count": 8,
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "weighted-designation",
+   "id": "eight-balance",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exempt-arlington",
+   "id": "opening-measurement",
    "metadata": {},
    "outputs": [],
    "source": []
