further trial runs

--- a/Code/Automated run analysis cls.ipynb
+++ b/Code/Automated run analysis cls.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "path = '..\\\\Data\\\\'\n",
     "random_state = 42\n",
-    "n_features_to_select = 5\n",
+    "n_features_to_select = 1\n",
     "n_runs = 100\n",
     "df_path = path + 'predictions_cls_seed{}_feat{}_runs{}.csv'.format(random_state, n_features_to_select, n_runs)\n",
     "rfe_path = path + 'rfe_cls_res_seed{}_feat{}_runs{}.pkl'.format(random_state, n_features_to_select, n_runs)"
@@ -102,11 +102,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.376238</td>\n",
+       "      <td>0.432343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.210361</td>\n",
+       "      <td>0.242874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -118,11 +118,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.333333</td>\n",
+       "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -135,12 +135,12 @@
       "text/plain": [
        "         accuracy\n",
        "count  101.000000\n",
-       "mean     0.376238\n",
-       "std      0.210361\n",
+       "mean     0.432343\n",
+       "std      0.242874\n",
        "min      0.000000\n",
        "25%      0.166667\n",
-       "50%      0.333333\n",
-       "75%      0.500000\n",
+       "50%      0.500000\n",
+       "75%      0.666667\n",
        "max      0.666667"
       ]
      },
@@ -193,12 +193,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ea</td>\n",
-       "      <td>ei</td>\n",
        "      <td>mi</td>\n",
        "      <td>mi</td>\n",
        "      <td>mi</td>\n",
-       "      <td>ei</td>\n",
-       "      <td>0.166667</td>\n",
+       "      <td>mi</td>\n",
+       "      <td>mi</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -206,7 +206,7 @@
       ],
       "text/plain": [
        "    0   5  36  45  13  54  accuracy\n",
-       "0  ea  ei  mi  mi  mi  ei  0.166667"
+       "0  ea  mi  mi  mi  mi  mi  0.666667"
       ]
      },
      "execution_count": 7,
@@ -285,8 +285,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "opening-measurement",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(rfe_path, 'rb') as f:\n",
+    "    rfe_dict = pickle.load(f) #counts, vals\n",
+    "counts = rfe_dict['counts']\n",
+    "vals = rfe_dict['vals']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "retained-sharing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['LUMO / eV'], dtype='<U10')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals[np.argmax(counts)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "affecting-spray",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eligible-essence",
    "metadata": {},
    "outputs": [],
    "source": []
