--- a/Code/Classification variant.ipynb
+++ b/Code/Classification variant.ipynb
@@ -168,22 +168,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "scientific-vehicle",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_model(n_input_features):\n",
     "    model = keras.models.Sequential([\n",
-    "        keras.layers.GaussianNoise(stddev=0.1),\n",
-    "        keras.layers.Dense(50, activation='relu', input_shape=(n_input_features,)),\n",
-    "        keras.layers.Dense(20, activation='relu'),\n",
-    "        keras.layers.Dense(10, activation='relu'),\n",
+    "        #keras.layers.GaussianNoise(stddev=0.1),\n",
+    "        keras.layers.Dense(10, activation='relu', input_shape=(n_input_features,)),\n",
+    "        #keras.layers.Dense(20, activation='relu'),\n",
+    "        #keras.layers.Dense(10, activation='relu'),\n",
     "        keras.layers.Dense(4, activation='softmax')\n",
     "        ])\n",
     "    \n",
     "    model.compile(\n",
-    "        optimizer=tf.optimizers.Adam(learning_rate=0.001),\n",
+    "        optimizer=tf.optimizers.Adam(learning_rate=0.01),\n",
     "        loss=keras.losses.sparse_categorical_crossentropy,\n",
     "        metrics=['accuracy'])\n",
     "    return model"
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "resistant-control",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "medical-stewart",
    "metadata": {},
    "outputs": [
@@ -210,105 +210,105 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "2/2 [==============================] - 0s 16ms/step - loss: 0.7309 - accuracy: 0.6852 - val_loss: 1.3532 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 47ms/step - loss: 1.5563 - accuracy: 0.1296 - val_loss: 1.4019 - val_accuracy: 0.5000\n",
       "Epoch 2/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7593 - accuracy: 0.7037 - val_loss: 1.3554 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.4960 - accuracy: 0.1667 - val_loss: 1.4153 - val_accuracy: 0.3333\n",
       "Epoch 3/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7437 - accuracy: 0.6852 - val_loss: 1.3623 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.4459 - accuracy: 0.1667 - val_loss: 1.4219 - val_accuracy: 0.0000e+00\n",
       "Epoch 4/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7814 - accuracy: 0.6111 - val_loss: 1.3654 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.3989 - accuracy: 0.2778 - val_loss: 1.4425 - val_accuracy: 0.0000e+00\n",
       "Epoch 5/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7583 - accuracy: 0.6852 - val_loss: 1.3766 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.3607 - accuracy: 0.2407 - val_loss: 1.4706 - val_accuracy: 0.0000e+00\n",
       "Epoch 6/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7674 - accuracy: 0.6296 - val_loss: 1.3840 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.3207 - accuracy: 0.3704 - val_loss: 1.4969 - val_accuracy: 0.1667\n",
       "Epoch 7/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7636 - accuracy: 0.6667 - val_loss: 1.3957 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.2918 - accuracy: 0.4630 - val_loss: 1.5288 - val_accuracy: 0.1667\n",
       "Epoch 8/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7202 - accuracy: 0.7407 - val_loss: 1.4095 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.2664 - accuracy: 0.5185 - val_loss: 1.5601 - val_accuracy: 0.1667\n",
       "Epoch 9/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7418 - accuracy: 0.6667 - val_loss: 1.4207 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.2425 - accuracy: 0.5370 - val_loss: 1.5896 - val_accuracy: 0.1667\n",
       "Epoch 10/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7443 - accuracy: 0.5926 - val_loss: 1.4349 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.2209 - accuracy: 0.5185 - val_loss: 1.6094 - val_accuracy: 0.1667\n",
       "Epoch 11/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7212 - accuracy: 0.7222 - val_loss: 1.4476 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.2042 - accuracy: 0.5185 - val_loss: 1.6266 - val_accuracy: 0.1667\n",
       "Epoch 12/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7142 - accuracy: 0.7037 - val_loss: 1.4593 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.1865 - accuracy: 0.5370 - val_loss: 1.6377 - val_accuracy: 0.1667\n",
       "Epoch 13/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6883 - accuracy: 0.7037 - val_loss: 1.4724 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.1697 - accuracy: 0.5185 - val_loss: 1.6409 - val_accuracy: 0.1667\n",
       "Epoch 14/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6810 - accuracy: 0.7407 - val_loss: 1.4808 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.1522 - accuracy: 0.5185 - val_loss: 1.6358 - val_accuracy: 0.1667\n",
       "Epoch 15/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7030 - accuracy: 0.7037 - val_loss: 1.4861 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 16ms/step - loss: 1.1335 - accuracy: 0.5185 - val_loss: 1.6311 - val_accuracy: 0.1667\n",
       "Epoch 16/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6876 - accuracy: 0.7222 - val_loss: 1.4891 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.1155 - accuracy: 0.5000 - val_loss: 1.6184 - val_accuracy: 0.1667\n",
       "Epoch 17/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7051 - accuracy: 0.7037 - val_loss: 1.4914 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.1010 - accuracy: 0.5000 - val_loss: 1.6017 - val_accuracy: 0.1667\n",
       "Epoch 18/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6995 - accuracy: 0.7037 - val_loss: 1.4987 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.0822 - accuracy: 0.5185 - val_loss: 1.5826 - val_accuracy: 0.1667\n",
       "Epoch 19/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6730 - accuracy: 0.7593 - val_loss: 1.5001 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.0646 - accuracy: 0.5370 - val_loss: 1.5641 - val_accuracy: 0.1667\n",
       "Epoch 20/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.7406 - accuracy: 0.7037 - val_loss: 1.5016 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.0498 - accuracy: 0.5370 - val_loss: 1.5448 - val_accuracy: 0.1667\n",
       "Epoch 21/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6447 - accuracy: 0.7593 - val_loss: 1.5059 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.0350 - accuracy: 0.5370 - val_loss: 1.5280 - val_accuracy: 0.1667\n",
       "Epoch 22/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6646 - accuracy: 0.7778 - val_loss: 1.5116 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.0193 - accuracy: 0.5370 - val_loss: 1.5158 - val_accuracy: 0.1667\n",
       "Epoch 23/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6902 - accuracy: 0.7222 - val_loss: 1.5172 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 1.0049 - accuracy: 0.5370 - val_loss: 1.5031 - val_accuracy: 0.1667\n",
       "Epoch 24/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6904 - accuracy: 0.7407 - val_loss: 1.5226 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.9918 - accuracy: 0.5370 - val_loss: 1.4942 - val_accuracy: 0.1667\n",
       "Epoch 25/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6828 - accuracy: 0.6852 - val_loss: 1.5313 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.9791 - accuracy: 0.5185 - val_loss: 1.4860 - val_accuracy: 0.1667\n",
       "Epoch 26/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6272 - accuracy: 0.7407 - val_loss: 1.5426 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.9672 - accuracy: 0.5370 - val_loss: 1.4865 - val_accuracy: 0.1667\n",
       "Epoch 27/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6548 - accuracy: 0.7222 - val_loss: 1.5515 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.9536 - accuracy: 0.5556 - val_loss: 1.4942 - val_accuracy: 0.1667\n",
       "Epoch 28/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6467 - accuracy: 0.7037 - val_loss: 1.5617 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.9423 - accuracy: 0.5556 - val_loss: 1.5070 - val_accuracy: 0.1667\n",
       "Epoch 29/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6383 - accuracy: 0.7778 - val_loss: 1.5714 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.9319 - accuracy: 0.5370 - val_loss: 1.5196 - val_accuracy: 0.1667\n",
       "Epoch 30/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6775 - accuracy: 0.7222 - val_loss: 1.5778 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.9202 - accuracy: 0.5370 - val_loss: 1.5217 - val_accuracy: 0.1667\n",
       "Epoch 31/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6624 - accuracy: 0.6852 - val_loss: 1.5862 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.9095 - accuracy: 0.5185 - val_loss: 1.5209 - val_accuracy: 0.1667\n",
       "Epoch 32/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6640 - accuracy: 0.6481 - val_loss: 1.5936 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 16ms/step - loss: 0.9019 - accuracy: 0.5185 - val_loss: 1.5210 - val_accuracy: 0.1667\n",
       "Epoch 33/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6638 - accuracy: 0.7037 - val_loss: 1.5995 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8919 - accuracy: 0.5185 - val_loss: 1.5160 - val_accuracy: 0.1667\n",
       "Epoch 34/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6561 - accuracy: 0.7407 - val_loss: 1.6039 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8827 - accuracy: 0.5370 - val_loss: 1.5043 - val_accuracy: 0.3333\n",
       "Epoch 35/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6338 - accuracy: 0.7222 - val_loss: 1.6049 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8753 - accuracy: 0.5370 - val_loss: 1.4992 - val_accuracy: 0.3333\n",
       "Epoch 36/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6273 - accuracy: 0.7778 - val_loss: 1.6076 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8661 - accuracy: 0.5185 - val_loss: 1.4995 - val_accuracy: 0.3333\n",
       "Epoch 37/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6887 - accuracy: 0.7037 - val_loss: 1.6122 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8596 - accuracy: 0.5370 - val_loss: 1.5029 - val_accuracy: 0.3333\n",
       "Epoch 38/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6270 - accuracy: 0.7222 - val_loss: 1.6151 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8525 - accuracy: 0.5370 - val_loss: 1.5070 - val_accuracy: 0.3333\n",
       "Epoch 39/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6155 - accuracy: 0.7407 - val_loss: 1.6214 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8446 - accuracy: 0.5370 - val_loss: 1.5174 - val_accuracy: 0.3333\n",
       "Epoch 40/50\n",
-      "2/2 [==============================] - ETA: 0s - loss: 0.6504 - accuracy: 0.81 - 0s 8ms/step - loss: 0.6477 - accuracy: 0.7593 - val_loss: 1.6235 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8391 - accuracy: 0.5741 - val_loss: 1.5312 - val_accuracy: 0.3333\n",
       "Epoch 41/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6790 - accuracy: 0.6296 - val_loss: 1.6269 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8346 - accuracy: 0.5741 - val_loss: 1.5489 - val_accuracy: 0.3333\n",
       "Epoch 42/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6617 - accuracy: 0.7037 - val_loss: 1.6281 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8262 - accuracy: 0.5741 - val_loss: 1.5620 - val_accuracy: 0.3333\n",
       "Epoch 43/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.5536 - accuracy: 0.8148 - val_loss: 1.6347 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8208 - accuracy: 0.5741 - val_loss: 1.5775 - val_accuracy: 0.3333\n",
       "Epoch 44/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6464 - accuracy: 0.7593 - val_loss: 1.6500 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8162 - accuracy: 0.6111 - val_loss: 1.5968 - val_accuracy: 0.3333\n",
       "Epoch 45/50\n",
-      "2/2 [==============================] - ETA: 0s - loss: 0.5942 - accuracy: 0.75 - 0s 8ms/step - loss: 0.6015 - accuracy: 0.7778 - val_loss: 1.6640 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8100 - accuracy: 0.6111 - val_loss: 1.6011 - val_accuracy: 0.3333\n",
       "Epoch 46/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.5863 - accuracy: 0.8148 - val_loss: 1.6796 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8071 - accuracy: 0.6111 - val_loss: 1.5976 - val_accuracy: 0.3333\n",
       "Epoch 47/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.5899 - accuracy: 0.7407 - val_loss: 1.6926 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.8008 - accuracy: 0.5926 - val_loss: 1.6066 - val_accuracy: 0.3333\n",
       "Epoch 48/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6360 - accuracy: 0.7037 - val_loss: 1.6990 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.7970 - accuracy: 0.5926 - val_loss: 1.6090 - val_accuracy: 0.3333\n",
       "Epoch 49/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.5864 - accuracy: 0.8148 - val_loss: 1.7065 - val_accuracy: 0.5000\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.7923 - accuracy: 0.6111 - val_loss: 1.6197 - val_accuracy: 0.3333\n",
       "Epoch 50/50\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.6159 - accuracy: 0.7037 - val_loss: 1.7111 - val_accuracy: 0.5000\n"
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.7875 - accuracy: 0.6111 - val_loss: 1.6155 - val_accuracy: 0.3333\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "reserved-dover",
    "metadata": {},
    "outputs": [],
@@ -329,17 +329,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "limited-raleigh",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 3, 2, 2, 2, 2], dtype=int64)"
+       "array([0, 3, 3, 2, 3, 2], dtype=int64)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
