--- a/Code/Automated run analysis.ipynb
+++ b/Code/Automated run analysis.ipynb
@@ -644,8 +644,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "dental-intelligence",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       12.295236\n",
+       "5       11.208369\n",
+       "36      22.444805\n",
+       "45      10.602673\n",
+       "13      34.816380\n",
+       "54      12.698621\n",
+       "loss     0.008527\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.std(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "gentle-donor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('..\\\\Data\\\\rf_results.pkl', 'rb') as f:\n",
+    "    res_dict = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "lyric-pitch",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 'rf') loss mean\n",
+      "0.05333250686526299\n",
+      "(3, 'rf') loss std\n",
+      "0.024744345941183753\n",
+      "(3, 'rf') pred mean\n",
+      "0     -11.644418\n",
+      "5      35.222423\n",
+      "36      2.077501\n",
+      "45     26.356657\n",
+      "13    121.641020\n",
+      "54    -41.713018\n",
+      "dtype: float64\n",
+      "(3, 'rf') pred std\n",
+      "0     45.985006\n",
+      "5     20.906963\n",
+      "36    25.642445\n",
+      "45    22.198172\n",
+      "13    61.366890\n",
+      "54    28.421437\n",
+      "dtype: float64\n",
+      "(3, 'rfe') loss mean\n",
+      "0.029666505306959152\n",
+      "(3, 'rfe') loss std\n",
+      "0.018543837206979365\n",
+      "(3, 'rfe') pred mean\n",
+      "0    -140.430883\n",
+      "5      63.303661\n",
+      "36     34.826439\n",
+      "45    -22.284843\n",
+      "13    147.957736\n",
+      "54     19.111144\n",
+      "dtype: float64\n",
+      "(3, 'rfe') pred std\n",
+      "0     33.150751\n",
+      "5     18.207593\n",
+      "36    28.932608\n",
+      "45    20.718578\n",
+      "13    52.348472\n",
+      "54    27.658377\n",
+      "dtype: float64\n",
+      "(5, 'rf') loss mean\n",
+      "0.052586213173344734\n",
+      "(5, 'rf') loss std\n",
+      "0.025610854399673512\n",
+      "(5, 'rf') pred mean\n",
+      "0     -12.443432\n",
+      "5      36.881293\n",
+      "36     -2.767877\n",
+      "45     24.083744\n",
+      "13    122.729546\n",
+      "54    -40.527884\n",
+      "dtype: float64\n",
+      "(5, 'rf') pred std\n",
+      "0     46.659880\n",
+      "5     18.869017\n",
+      "36    26.276059\n",
+      "45    21.399793\n",
+      "13    57.321076\n",
+      "54    30.150723\n",
+      "dtype: float64\n",
+      "(5, 'rfe') loss mean\n",
+      "0.029124097982421517\n",
+      "(5, 'rfe') loss std\n",
+      "0.01660491934808318\n",
+      "(5, 'rfe') pred mean\n",
+      "0    -138.899909\n",
+      "5      65.772058\n",
+      "36     32.875376\n",
+      "45    -19.876483\n",
+      "13    144.029941\n",
+      "54     23.678747\n",
+      "dtype: float64\n",
+      "(5, 'rfe') pred std\n",
+      "0     33.190006\n",
+      "5     19.362198\n",
+      "36    29.436711\n",
+      "45    22.357475\n",
+      "13    49.410676\n",
+      "54    31.746329\n",
+      "dtype: float64\n",
+      "(63, 'rf') loss mean\n",
+      "0.05216865622438491\n",
+      "(63, 'rf') loss std\n",
+      "0.026339212784811016\n",
+      "(63, 'rf') pred mean\n",
+      "0     -10.682136\n",
+      "5      31.910694\n",
+      "36     -3.741794\n",
+      "45     21.967358\n",
+      "13    117.044071\n",
+      "54    -41.504530\n",
+      "dtype: float64\n",
+      "(63, 'rf') pred std\n",
+      "0     51.234453\n",
+      "5     19.549449\n",
+      "36    27.688496\n",
+      "45    21.602905\n",
+      "13    55.437519\n",
+      "54    26.169364\n",
+      "dtype: float64\n",
+      "(63, 'rfe') loss mean\n",
+      "0.028964279277715832\n",
+      "(63, 'rfe') loss std\n",
+      "0.018209716274328477\n",
+      "(63, 'rfe') pred mean\n",
+      "0    -142.418804\n",
+      "5      64.897289\n",
+      "36     30.144287\n",
+      "45    -20.625978\n",
+      "13    146.926977\n",
+      "54     18.856074\n",
+      "dtype: float64\n",
+      "(63, 'rfe') pred std\n",
+      "0     32.519561\n",
+      "5     18.399786\n",
+      "36    27.202690\n",
+      "45    19.219678\n",
+      "13    53.767047\n",
+      "54    27.803282\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in res_dict.keys():\n",
+    "    for k in res_dict[key].keys():\n",
+    "        print(key, k)\n",
+    "        print(res_dict[key][k])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "capital-fifty",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 'rf')\n",
+      "  0.0533 & -11.64 & 35.22 & 2.08 & 26.36 & 121.64 & -41.71 & \n",
+      "  $\\pm$ 0.0247 & $\\pm$ 45.99 & $\\pm$ 20.91 & $\\pm$ 25.64 & $\\pm$ 22.20 & $\\pm$ 61.37 & $\\pm$ 28.42 & \n",
+      "(3, 'rfe')\n",
+      "  0.0297 & -140.43 & 63.30 & 34.83 & -22.28 & 147.96 & 19.11 & \n",
+      "  $\\pm$ 0.0185 & $\\pm$ 33.15 & $\\pm$ 18.21 & $\\pm$ 28.93 & $\\pm$ 20.72 & $\\pm$ 52.35 & $\\pm$ 27.66 & \n",
+      "(5, 'rf')\n",
+      "  0.0526 & -12.44 & 36.88 & -2.77 & 24.08 & 122.73 & -40.53 & \n",
+      "  $\\pm$ 0.0256 & $\\pm$ 46.66 & $\\pm$ 18.87 & $\\pm$ 26.28 & $\\pm$ 21.40 & $\\pm$ 57.32 & $\\pm$ 30.15 & \n",
+      "(5, 'rfe')\n",
+      "  0.0291 & -138.90 & 65.77 & 32.88 & -19.88 & 144.03 & 23.68 & \n",
+      "  $\\pm$ 0.0166 & $\\pm$ 33.19 & $\\pm$ 19.36 & $\\pm$ 29.44 & $\\pm$ 22.36 & $\\pm$ 49.41 & $\\pm$ 31.75 & \n",
+      "(63, 'rf')\n",
+      "  0.0522 & -10.68 & 31.91 & -3.74 & 21.97 & 117.04 & -41.50 & \n",
+      "  $\\pm$ 0.0263 & $\\pm$ 51.23 & $\\pm$ 19.55 & $\\pm$ 27.69 & $\\pm$ 21.60 & $\\pm$ 55.44 & $\\pm$ 26.17 & \n",
+      "(63, 'rfe')\n",
+      "  0.0290 & -142.42 & 64.90 & 30.14 & -20.63 & 146.93 & 18.86 & \n",
+      "  $\\pm$ 0.0182 & $\\pm$ 32.52 & $\\pm$ 18.40 & $\\pm$ 27.20 & $\\pm$ 19.22 & $\\pm$ 53.77 & $\\pm$ 27.80 & \n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in res_dict.keys():\n",
+    "    print(key)\n",
+    "    prm = ['{:.2f} & '.format(p) for p in res_dict[key]['pred mean']]\n",
+    "    print('  {:.4f} & '.format(res_dict[key]['loss mean']) + ''.join(prm) )\n",
+    "    prs = ['$\\pm$ {:.2f} & '.format(p) for p in res_dict[key]['pred std']]\n",
+    "    print('  $\\pm$ {:.4f} & '.format(res_dict[key]['loss std'])+ ''.join(prs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fiscal-halloween",
    "metadata": {},
    "outputs": [],
    "source": []
